--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nodejs-simple-webserver",
   "main": "src/bin/start.js",
   "scripts": {
-    "test": "test"
+    "start": "node ./src/bin/start.js"
   },
   "author": "",
   "license": "ISC",
